docs: fixed typo and img links

--- a/docs/roadmap/index.mdx
+++ b/docs/roadmap/index.mdx
@@ -6,6 +6,7 @@ sidebar_position: 4
 
 here's some things that are _tentatively_ planned in terms of improvements, make anything cool or fix a bug? Open a [PR](https://github.com/niknakz/repos/pulls)
 
+import useBaseUrl from '@docusaurus/useBaseUrl';
 export const ListItem = ({ children, name, src }) => (
   <span
     style={{
@@ -14,7 +15,7 @@ export const ListItem = ({ children, name, src }) => (
       padding: '1rem',
     }}
   >
-    <img src={src} style={{ width: '6rem', padding: '1rem' }} />
+    <img src={useBaseUrl(src)} style={{ width: '6rem', padding: '1rem' }} />
     <span
       style={{
         display: 'flex',
