--- a/docs/tutorial.mdx
+++ b/docs/tutorial.mdx
@@ -57,7 +57,7 @@ more docs on this soon but for now the syntax is documented with typescript in t
 once you have everything set up build and serve for best performance and to enable to local search
 
 ```bash
-npm run clean
+npm run clear
 npm run build
 npm run serve
 ```
