--- a/docs/tech-stack/index.mdx
+++ b/docs/tech-stack/index.mdx
@@ -4,6 +4,7 @@ sidebar_position: 5
 
 # Tech Stack
 
+import useBaseUrl from '@docusaurus/useBaseUrl';
 export const TechStack = ({ children, name, link, src }) => (
   <span
     style={{
@@ -14,7 +15,7 @@ export const TechStack = ({ children, name, link, src }) => (
     }}
   >
     <a style={{ width: '6rem', padding: '1rem' }} href={link} alt={name}>
-      <img src={src} />
+      <img src={useBaseUrl(src)} />
     </a>
     <span
       style={{
