docs: ran prettier

--- a/docs/roadmap/index.mdx
+++ b/docs/roadmap/index.mdx
@@ -6,7 +6,7 @@ sidebar_position: 4
 
 here's some things that are _tentatively_ planned in terms of improvements, make anything cool or fix a bug? Open a [PR](https://github.com/niknakz/repos/pulls)
 
-import useBaseUrl from '@docusaurus/useBaseUrl';
+import useBaseUrl from '@docusaurus/useBaseUrl'
 export const ListItem = ({ children, name, src }) => (
   <span
     style={{
