--- a/docs/tech-stack/index.mdx
+++ b/docs/tech-stack/index.mdx
@@ -4,7 +4,7 @@ sidebar_position: 5
 
 # Tech Stack
 
-import useBaseUrl from '@docusaurus/useBaseUrl';
+import useBaseUrl from '@docusaurus/useBaseUrl'
 export const TechStack = ({ children, name, link, src }) => (
   <span
     style={{
